--- a/inzynierstwo/instalacja.tex
+++ b/inzynierstwo/instalacja.tex
@@ -1,3 +1,59 @@
 \chapter{Instalacja i wdrożenie}
 \thispagestyle{chapterBeginStyle}
-do zrobienia
+W tym rodziale przeprowadzone zostały instrukcje do uruchomienia aplikacji
+\section{Uruchomienie serwera}
+ Osoba zainteresowana, która chciałaby uruchomić daną aplikację lokalnie na swojej maszynie, musi liczyć się z tym, że rozbudowana aplikacja posiada wiele zależności z innymi programami i konfiguracji, dlatego serwer oraz baza danych zostały skonteneryzowane.  Konteneryzacja to wprowadzenie aplikacji ze wszystkimi zależnościami i wymaganymi do uruchomienia programami do wirtualnej jednostki zwanej kontenerem. Kontener to proces odizolowany od wszystkich innych procesów na maszynie hosta. Proces ten przeprowadzony został za pomocą programu \textit{Docker} \cite{docker}. 
+ \paragraph{Instalacja programu Docker} 
+ Platforma jest w pełni kompatybilna z systemem \textit{linux}, dla systemu \linebreak macOS i Windows docker udostępnia nakładkę pozwalającą korzystać z funkcji programu. Można pobrać go z oficjalnej strony :  \textit{\url{https://docs.docker.com/get-docker/}} 
+ Po zainstalowaniu \textit{Dockera} w głównej gałęzi projektu \textit{./tmapp/}, gdzie znajduje się plik \textbf{docker-compose.yml}  wykonać w terminalu komendę:
+ 
+ \begin{lstlisting}
+docker-compose up --build -d
+ \end{lstlisting}
+
+
+Stworzone zostaną dwa kontenery, które przetrzymują serwer aplikacji i serwer bazy danych. Aby sprawdzić informacje na temat kontenerów należy wykonać komendę:
+ 
+ \begin{lstlisting}
+docker ps
+\end{lstlisting}
+
+Dzięki temu, że aplikacja została zkonteneryzowana, wystarczy pobrać \textit{dockera}, aby wywołać odpowiednie kontenery, które same doinstalują i zbudują projekt serwera. Aplikacja klienta nie została zdokeryzowana (inaczej konteneryzacja dzięki \textit{Docker}), ponieważ nie było to optymalne rozwiązanie. Framework \textit{Angular} wczystuje sporą liczbę plików przy budowaniu projektu przez co kontener ważyłby o wiele więcej. Podczas próby konteneryzacji trzech elementów, zauważony został zauważalny wzrost czasu załadowywania widoków na stronie oraz wydłużyła się komunikacja między serwerem.
+\clearpage
+\section{Uruchomienie klienta}
+Kolejnym krokiem jest uruchomienie aplikacji klienta.
+W tym celu potrzebujemy środowisko \textit{node.js}, aby zainstalować szkielet \textit{Angular}. W tym celu pobieramy ze strony: \textit{\url{https://nodejs.org/en/download/}} 
+Podczas instalacji powinno kierować się domyślnymi konfiguracjami, które dodają odpowiednio program \textit{node} oraz \textit{npm}. Po instalacji można sprawdzić czy dane programy zostały odpowiednio zainstalowane za pomocą komend
+ \begin{lstlisting}
+	node --version
+\end{lstlisting}
+oraz
+\begin{lstlisting}
+	npm --version
+\end{lstlisting}. Powinny zostać wyświetlone informacje na temat programu i jego zainstalowanej wersji. 
+
+Kolejnym krokiem jest za pomocą programów wcześniej zainstalowanych instalacja szkieletu \textit{Angular}
+Należy w wierszu poleceń wpisać następującą komendę:
+\begin{lstlisting}
+npm install -g @angular/cli
+\end{lstlisting}
+Dzięki wszystkim programom zainstalowanym powyższymi komendami możemy ostatecznie przejść do głównego folderu z aplikacją w wierszy poleceń: \begin{lstlisting}
+	cd /path/to/rootfolder/tmapp/
+\end{lstlisting}
+Kiedy wiersz polecenia wskazuje na główny folder systemu, w którym znajduje się plik \textit{package.json}, zbudujemy projekt za pomocą komendy:
+
+\begin{lstlisting}
+npm install
+\end{lstlisting}
+
+Po pomyślnej inicjalizacji projektu i doinstalowaniu wszystkich potrzebnych paczek zewnętrznych powinien zostać wyświetlony komunikat o sukcesie.
+Ostatnim krokiem zostało włączenie aplikacji za pomocą komendy:
+\begin{lstlisting}
+ng serve
+\end{lstlisting}
+Gdy dany proces włączania aplikacji przejdzie pomyślnie, strona \textit{http://localhost:9000} zostanie włączona automatycznie w domyślnej przeglądarce internetowej danej maszyny.
+
+
+
+
+
