--- a/inzynierstwo/literatura.bib
+++ b/inzynierstwo/literatura.bib
@@ -1,3 +1,43 @@
+@book{Rest,
+	author={Bhakti Mehta},
+	title={RESTful Java Patterns and Best Practices},
+	publisher={Packt Publishing},
+	year={2014}
+}
+
+
+@book{db,
+	author={Christopher J. Date},
+	title={An Introduction to Database Systems},
+	publisher={Pearson},
+	year={2003}
+}
+
+
+@INPROCEEDINGS{6827095,
+	author={Syromiatnikov, Artem and Weyns, Danny},
+	booktitle={2014 IEEE/IFIP Conference on Software Architecture}, 
+	title={A Journey through the Land of Model-View-Design Patterns}, 
+	year={2014},
+	volume={},
+	number={},
+	pages={21-30},
+	doi={10.1109/WICSA.2014.13}}
+
+@misc{rfc7230,
+	series =	{Request for Comments},
+	number =	7230,
+	howpublished =	{RFC 7230},
+	publisher =	{RFC Editor},
+	doi =		{10.17487/RFC7230},
+	url =		{https://rfc-editor.org/rfc/rfc7230.txt},
+	author =	{Roy T. Fielding and Julian Reschke},
+	title =		{{Hypertext Transfer Protocol (HTTP/1.1): Message Syntax and Routing}},
+	pagetotal =	89,
+	year =		2014,
+	month =		jun,
+	abstract =	{The Hypertext Transfer Protocol (HTTP) is a stateless application-level protocol for distributed, collaborative, hypertext information systems. This document provides an overview of HTTP architecture and its associated terminology, defines the "http" and "https" Uniform Resource Identifier (URI) schemes, defines the HTTP/1.1 message syntax and parsing requirements, and describes related security concerns for implementations.},
+}
 @misc{Java,
     title={Java Technology},
     howpublished={Web pages: \url{http://www.oracle.com/technetwork/java/}},
@@ -35,6 +75,13 @@
 	url={https://git-scm.com/doc}
 }
 
+@misc{docker,
+	title={Docker overview},
+	howpublished={Web pages: \url{https://docs.docker.com/get-started/}},
+	url={https://docs.docker.com/get-started/}
+}
+
+
 @misc{SpringSecurity,
 title={Spring Security Overview},
 howpublished={Web pages: \url{https://spring.io/projects/spring-security}},
@@ -66,43 +113,3 @@ url={https://spring.io/projects/spring-security}
 }
 
 
-@book{Rest,
-    author={Bhakti Mehta},
-    title={RESTful Java Patterns and Best Practices},
-    publisher={Packt Publishing},
-    year={2014}
-}
-
-
-@book{db,
-	author={Christopher J. Date},
-	title={An Introduction to Database Systems},
-	publisher={Pearson},
-	year={2003}
-}
-
-
-@INPROCEEDINGS{6827095,
-	author={Syromiatnikov, Artem and Weyns, Danny},
-	booktitle={2014 IEEE/IFIP Conference on Software Architecture}, 
-	title={A Journey through the Land of Model-View-Design Patterns}, 
-	year={2014},
-	volume={},
-	number={},
-	pages={21-30},
-	doi={10.1109/WICSA.2014.13}}
-
-@misc{rfc7230,
-	series =	{Request for Comments},
-	number =	7230,
-	howpublished =	{RFC 7230},
-	publisher =	{RFC Editor},
-	doi =		{10.17487/RFC7230},
-	url =		{https://rfc-editor.org/rfc/rfc7230.txt},
-	author =	{Roy T. Fielding and Julian Reschke},
-	title =		{{Hypertext Transfer Protocol (HTTP/1.1): Message Syntax and Routing}},
-	pagetotal =	89,
-	year =		2014,
-	month =		jun,
-	abstract =	{The Hypertext Transfer Protocol (HTTP) is a stateless application-level protocol for distributed, collaborative, hypertext information systems. This document provides an overview of HTTP architecture and its associated terminology, defines the "http" and "https" Uniform Resource Identifier (URI) schemes, defines the HTTP/1.1 message syntax and parsing requirements, and describes related security concerns for implementations.},
-}
