fixes before work

--- a/inzynierstwo/dodatek1.tex
+++ b/inzynierstwo/dodatek1.tex
@@ -2,5 +2,6 @@
 \thispagestyle{chapterBeginStyle}
 \label{plytaCD}
 
-W tym rozdziale należy krótko omówić zawartość dołączonej płyty CD.
-
+Płyta CD zawiera pracę pisemną w formacie \textbf{PDF} oraz katalog o nazwie \textit{tmapp}, który przechowuje tylko pliki źródłowe.
+Pliki źródłowe serwera znajdują się w podkatalogu \textit{tmapp/src/main/java}, a pliki źródłowe klienta znajdują się w podkatalogu \textit{tmapp/src/main/webapp}
+W katalogu głównym znajdują się również pliki konfiguracyjne odpowiedzialne za prawidłowe zbudowanie oraz uruchomienie aplikacji. 
